--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
 	},
 	"homepage": "https://github.com/demola07/nodejs-examples-initiative-challenge#readme",
 	"dependencies": {
-		"express": "^4.17.1"
+		"bent": "^7.3.10",
+		"express": "^4.17.1",
+		"hbs": "^4.1.1",
+		"semver": "^7.3.2"
 	}
 }
