--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
 		"bent": "^7.3.10",
 		"express": "^4.17.1",
 		"hbs": "^4.1.1",
-		"semver": "^7.3.2"
+		"nock": "^13.0.4",
+		"semver": "^7.3.2",
+		"tape": "^5.0.1"
 	}
 }
