adds export app so tape can run

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"test": "test"
 	},
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "tape test/index.js",
 		"start": "node index"
 	},
 	"repository": {
@@ -24,6 +24,7 @@
 	"dependencies": {
 		"bent": "^7.3.10",
 		"express": "^4.17.1",
+		"get-port": "^5.1.1",
 		"hbs": "^4.1.1",
 		"nock": "^13.0.4",
 		"semver": "^7.3.2",
